# txurrukli

./: .gitignore  Cargo.toml  TODO.md
src/: main.rs  models.rs
src/clients/: elcano_client.rs  listado-estaciones-completo.csv  mod.rs
src/parsers/: elcano_parser.rs  mod.rs
