[package]
name = "txurrukli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
html_parser = "0.6.3"
serde = "1.0.119"
serde_json = "1.0.96"
